--- a/index.html
+++ b/index.html
@@ -131,29 +131,8 @@
 
     <div class="container">
       <div class="page-header">
-        <h1>TripleZen &dash; Bitcoin(<span class='currency'></span>) Mint &dash; Qld Server</h1>
-		<p style="text-align: right">
-		<button class="button" onclick="location.href = 'http://triplezen.ddns.net:9332/static/'"><img src="img/bitcoin.png"><span>BTC</span></button>
-		<button class="button" onclick="location.href = 'http://triplezen.ddns.net:9327/static/'"><img src="img/litecoin.png"><span>LTC</span></button>
-		<button class="button" onclick="location.href = 'http://triplezen.ddns.net:5025/static/'"><img src="img/digibyte.png"><span>DGB(scrypt)</span></button>
-<!--      <button class="button" onclick="location.href = 'http://triplezen.ddns.net:7903/static/'"><img src="img/dash.png"><span>DASH</span></button>
-<button class="button" onclick="location.href = 'http://:9348/static/'"><img src="img/bch.png"><span>BCH</span></button>
-  <button class="button" onclick="location.href = 'http://:2936/static/'"><img src="img/unit.png"><span>UNIT</span></button>
-  <button class="button" onclick="location.href = 'http://:9171/static/'"><img src="img/vertcoin.png"><span>VTC</span></button>
-  <button class="button" onclick="location.href = 'http://:9181/static/'"><img src="img/vertcoin.png"><span>VTC(mid_hash)</span></button>
-  <button class="button" onclick="location.href = 'http://:40004/static/'"><img src="img/game.png"><span>GAME</span></button>
-  <button class="button" onclick="location.href = 'http://:5110/static/'"><img src="img/artbyte.png"><span>ABY</span></button>
-  <button class="button" onclick="location.href = 'http://:28741/static/'"><img src="img/cann.png"><span>CANN</span></button>
-  <button class="button" onclick="location.href = 'http://:8279/static/'"><img src="img/kzcash.png"><span>KZC</span></button>
-  <button class="button" onclick="location.href = 'http://:12355/static/'"><img src="img/aurora.png"><span>AUR(qubit)</span></button>
-  <button class="button" onclick="location.href = 'http://:12351/static/'"><img src="img/aurora.png"><span>AUR(groestl)</span></button>
-  <button class="button" onclick="location.href = 'http://:5023/static/'"><img src="img/digibyte.png"><span>DGB(qubit)</span></button>
-  <button class="button" onclick="location.href = 'http://:5021/static/'"><img src="img/digibyte.png"><span>DGB(groestl)</span></button>
-  <button class="button" onclick="location.href = 'http://:9553/static/'"><img src="img/arg.png"><span>ARG(groestl)</span></button>
-  <button class="button" onclick="location.href = 'http://:9552/static/'"><img src="img/arg.png"><span>ARG(argon2d)</span></button>
-  <button class="button" onclick="location.href = 'http://:15064/static/'"><img src="img/UIS.png"><span>UIS(argon2d)</span></button>
--->
-  </p>
+        <h1>Bitcoin(<span class='currency'></span>) Mint &dash; Qld Server</h1>
+		
         <p style="text-align: right"><b>
           <small>
             Node: <span class='node'></span>&nbsp;&dash;
@@ -167,25 +146,7 @@
            happened or if we have other things to tell them. -->
       <div class="alert alert-danger hidden">
           <p></p>
-      </div>
-      <div>
-			<p>This node is running on </p><br>&nbsp;<br>
-            <h4>Getting Started</h4><br>
-
-			Use the following information to start blocking with us:<br>
-			Pool URL: stratum+tcp://triplezen.ddns.net:9332<br>
-			Alternate: stratum+tcp://aussie-p2pool.ddns.net:9332<br>
-			User ID: Use your legacy BTC Address followed by /0 for smaller hash miners<br>
-			Password: x<br>
-			&nbsp;<br> 
-			IMPORTANT:<br>
-			Do NOT mine directly to an Exchange Wallet Address and do not use worker names (e.g. BTC_Address.worker)
-            <br>&nbsp;<br>
-            POOL SUPPORT - <a href="https://discord.gg/rhDhFMJ">Discord Channel</a>
-
-      </div>
-
-      
+      </div>      
 
       <h4>Status</h4>
       <table id='status' class="table table-hover" border='0'>
