--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
         
-    <title>(BTC) Mint v3.5.0</title>
+    <title>(BTC) Mint</title>
 
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,300italic,400,400italic,100,100italic,500,500italic,700,700italic,900,900italic" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
@@ -116,11 +116,11 @@
   </head>
 
   <body>
-    <!--<div id='ribbon'>
+    <div id='ribbon'>
       <a href="https://github.com/farsider350/node-stats">
         <img style="position: absolute; top: 0; right: 0; border: 0;" src="img/forkme_right_orange_ff7600.png" alt="Fork me on GitHub">
       </a>
-    </div>-->
+    </div>
  
 
     <!--<div id='ribbon'>
@@ -131,7 +131,7 @@
 
     <div class="container">
       <div class="page-header">
-        <h1>Bitcoin(<span class='currency'></span>) Mint &dash; Qld Server</h1>
+        <h1>Bitcoin(<span class='currency'></span>) Mint</h1>
 		
         <p style="text-align: right"><b>
           <small>
