--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
         .text((local_stats.donation_proportion * 100) + '%');
       
       $('#node_fee')
-        .text((local_stats.fee / 2) + '%');
+        .text((local_stats.fee) + '%');
       $('#p2pool_version')
         .text(local_stats.version);
       $('#protocol_version')
